# FarmX-AI

./: .gitignore
backend/: .env.example  agro_gpt.db  pyproject.toml  requirements.txt  run.py  setup.py
backend/app/: main.py
backend/app/services/: agro_gpt.py  agro_gpt_google.py  agro_gpt_smart.py  plant_analysis.py  yield_prediction.py
backend/app/utils/: file_utils.py  image_processing.py  model_loader.py  response_formatter.py  validation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Header.css  Header.tsx
frontend/src/components/AgroGPT/: AgroGPT.css  AgroGPT.tsx
frontend/src/components/PlantAnalysis/: PlantAnalysis.css  PlantAnalysis.tsx
frontend/src/components/YieldPrediction/: YieldPrediction.css  YieldPrediction.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
